# gachitore

./: .dockerignore  .gitignore  README.md  SECURITY_REVIEW.md  SUBSCRIPTION_IMPLEMENTATION_COMPLETE.md  fly.toml  sql.md  todo.md  ページ.md  概要.md
apps/mobile_flutter/: README.md  firebase.json  pubspec.yaml
apps/mobile_flutter/android/app/: build.gradle.kts  google-services.json
apps/mobile_flutter/ios/Runner/: Info.plist
apps/mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile_flutter/lib/: firebase_options.dart  firebase_options.dart.example  main.dart
apps/mobile_flutter/lib/core/api/: api_client.dart
apps/mobile_flutter/lib/core/auth/: auth_storage_keys.dart  jwt_utils.dart  secure_token_storage.dart
apps/mobile_flutter/lib/core/constants/: app_colors.dart  app_settings_keys.dart  app_theme.dart
apps/mobile_flutter/linux/: CMakeLists.txt
apps/mobile_flutter/linux/runner/: my_application.cc
apps/mobile_flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/mobile_flutter/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile_flutter/test/: widget_test.dart
apps/mobile_flutter/web/: index.html  manifest.json
apps/mobile_flutter/windows/: CMakeLists.txt
apps/mobile_flutter/windows/runner/: Runner.rc  main.cpp
docs/: privacy_policy.md  session_refresh.md  subscription_implementation_flow.md
services/api_rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  fly.toml
services/api_rust/src/: main.rs
services/api_rust/src/api/: mod.rs  subscription_check.rs  validation.rs
services/api_rust/src/api/handlers/: ai.rs  ai_inbox.rs  auth.rs  dashboard.rs  meals.rs  mod.rs  photos.rs  posts.rs  push_tokens.rs  subscriptions.rs  support.rs  users.rs  workouts.rs
services/api_rust/src/api/middleware/: auth.rs
services/api_rust/src/api/routes/: mod.rs
services/api_rust/src/config/: mod.rs
services/api_rust/src/domain/entities/: mod.rs
services/api_rust/src/domain/services/: mod.rs
services/api_rust/src/error/: mod.rs
services/api_rust/src/infrastructure/: mod.rs
services/api_rust/src/infrastructure/gemini/: mod.rs
services/api_rust/src/infrastructure/supabase/: client.rs  mod.rs  models.rs
services/api_rust/src/state/: mod.rs
supabase/functions/meal-reminder/: index.ts
supabase/functions/send-chat-push/: index.ts
supabase/migrations/: 20251218_fix_ai_recommendations_insert_rls.sql  20251218_meal_reminder_inbox_and_cron.sql  20251218_user_photos_storage.sql  20251218_user_push_tokens.sql  20251219_cleanup_unused_objects.sql  20251219_db_hardening_and_indexes_v2.sql  20251219_fix_meal_items_numeric_overflow.sql  20251219_meal_reminder_cron_db_function.sql  20251219_support_contacts_and_exercises_insert_policy.sql  20251219_user_photos_limit_100.sql  20260109_add_avatar_to_user_profiles.sql  20260109_add_posts_user_profiles_fk.sql  20260109_posts_table_for_board.sql  20260110_workouts_public_dates_policy.sql  20260111_fix_subscription_rls.sql  20260111_fix_user_profiles_rls.sql  20260111_subscription_system.sql  20260112_fix_security_definer_authorization.sql  20260112_fix_subscription_trigger_error.sql
supabase/seed/: seed.sql
(+84 files in other folders)
