[package]
name = "gachitore-api"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Gachitore API - Rust Axum backend (Supabase REST API client)"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "catch-panic", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Supabase REST API & Gemini API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JWT / Auth
jsonwebtoken = "9"
base64 = "0.21"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# URL encoding (for safe PostgREST query construction)
urlencoding = "2"

# Async
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Rate limiting
governor = "0.6"
tower_governor = "0.4"

# Regex for log masking
regex = "1"

# Unicode normalization for security (prompt injection prevention)
unicode-normalization = "0.1"

# Caching for signed URLs
# Note: Pinned to avoid Rust 1.85+ requirement from newer async-lock versions
moka = { version = "0.12", features = ["future"] }

# Image processing (for thumbnail generation)
# Note: 0.25.5 is pinned to avoid edition2024 compatibility issues with Rust 1.83
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
